<resources>
    <string name="app_name">Bitirme_2</string>
    <string name="wellcome_to_e_tech_education">Welcome to e-TechEducation</string>
    <string name="do_you_have_a_account_sign_on">Do you have a account? Sign on.</string>
    <string name="click_here_and_register">Click here and register.</string>
    <string name="user_name_or_mail_address">User Name or Mail Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="e_techeducation_registration_page">e-TechEducation Registration Page</string>
    <string name="name">Name</string>
    <string name="sur_name">Sur name</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="map_filtering">Map Filtering</string>
    <string name="detail_filtering">Detail Filtering</string>
    <string name="mark_on_the_map">Mark on the map</string>
    <string name="no">No</string>
    <string name="time_interval">Time Interval</string>
    <string name="district">District</string>
    <string name="online">Online</string>
    <string name="other_place">Other Place</string>
    <string name="trainer_home">Trainer Home</string>
    <string name="student_home">Student Home</string>
    <string name="enter_a_cost">Enter a cost</string>
    <string name="course_upload">Course Upload</string>
    <string name="i_m_student">I am student</string>
    <string name="i_m_trainer">I am trainer</string>
    <string name="okay">Okay</string>
    <string name="selectRole">What is your role?</string>
    <string name="pleaseSelectRole">Please select a any role.</string>
    <string name="selectGender">What is your gender?</string>
    <string name="pleaseSelectGender">Please select a any gender.</string>
    <string name="mailNotNull">Mail address not null.</string>
    <string name="pleaseEnterMail">Please enter a mail address</string>
    <string name="passwordNotNull">Password incorrect</string>
    <string name="pleaseEnterPassowrd">Password field not null, please enter a password.</string>
    <string name="nameNotNull">Name field not null.</string>
    <string name="pleaseEnterName">Please enter a name.</string>
    <string name="surNameNotNull">Sur name not null.</string>
    <string name="pleaseEnterSurName">Please enter a sur name.</string>
    <string name="app_text">e-Tech Education</string>
    <string name="hello_i_want_to_talk_to_you_about_your_course">Hello, I want to talk to you about your course.</string>
    <string name="online_hastag">#online</string>
    <string name="otherplace_hastag">#otherplace</string>
    <string name="trainerhome_hastag">#trainerhome</string>
    <string name="studenthome">#studenthome</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="re_enter_password">Re enter password</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="change_password">Change Password</string>
    <string name="max">MAX :</string>
    <string name="min">MIN :</string>
    <string name="_0">0</string>
    <string name="place_search">PLACE SEARCH</string>
    <string name="enter_a_course_name">Enter a course name</string>
    <string name="cost_search">COST SEARCH</string>
    <string name="name_search">NAME SEARCH</string>
    <string name="don_t_have_an_account_sign_up">Do not have an account? Sign up.</string>
    <string name="send_code">Send code</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="application_label">E-TechEducation</string>
    <string name="enter_a_course_detail">Enter a course detail</string>
</resources>