<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controllers.user.ProfilSettings"
    >

    <EditText
        android:id="@+id/txtRePassword"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRePassword2"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRePassword" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profileSettingsBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/txtRePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_border_color="@color/black" />

    <Button
        android:id="@+id/btnChange"
        android:layout_width="181dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRePassword2" />

    <Button
        android:id="@+id/btnChangeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChange" />
</androidx.constraintlayout.widget.ConstraintLayout>