<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ee"
    tools:context="controllers.user.Register">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/regisBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="84dp"
        android:text="@string/e_techeducation_registration_page"
        android:textColor="@color/md_amber_600"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSingUp"
        style="@style/Button1"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdRegisterStudent" />

    <RadioButton
        android:id="@+id/rdRegisterStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:text="@string/i_m_student"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdRegisterGenderFamale" />

    <RadioButton
        android:id="@+id/rdRegisterTrainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:text="@string/i_m_trainer"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:buttonTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/rdRegisterStudent"
        app:layout_constraintTop_toBottomOf="@+id/rdRegisterGenderMale" />

    <RadioButton
        android:id="@+id/rdRegisterGenderMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"

        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:text="I am Male"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/rdRegisterGenderFamale"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterPassword" />

    <RadioButton
        android:id="@+id/rdRegisterGenderFamale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:text="I am Famale"
        android:buttonTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterPassword" />

    <EditText
        android:id="@+id/txtRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:drawableTint="@color/white"
        android:inputType="textPassword"
        android:minWidth="320dp"
        android:minHeight="45dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterMail" />

    <EditText
        android:id="@+id/txtRegisterMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:drawableTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_mail_24"
        android:drawablePadding="12dp"
        android:hint="@string/e_mail_address"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:minWidth="320dp"
        android:minHeight="45dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterSurName" />

    <EditText
        android:id="@+id/txtRegisterSurName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_baseline_account_box_24"
        android:drawablePadding="12dp"
        android:hint="@string/sur_name"
        android:drawableTint="@color/white"
        android:imeOptions="actionNext"
        android:minWidth="320dp"
        android:minHeight="45dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterName" />

    <EditText
        android:id="@+id/txtRegisterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/ic_baseline_account_box_24"
        android:drawablePadding="12dp"
        android:drawableTint="@color/white"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:minWidth="320dp"
        android:minHeight="45dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>